<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.Rules">


    <LinearLayout
        android:id="@+id/theRulesGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/rulesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:padding="30dp"
            android:text="@string/rulesTitle"
            android:textAlignment="center"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/rule1TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="30dp"
            android:text="@string/rule1"
            android:textAlignment="textStart"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rule2TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="30dp"
            android:text="@string/rule2"
            android:textAlignment="textStart"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rule3TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="30dp"
            android:text="@string/rule3"
            android:textAlignment="textStart"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rule4TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="30dp"
            android:text="@string/rule4"
            android:textAlignment="textStart"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rule5TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="30dp"
            android:text="@string/rule5"
            android:textAlignment="textStart"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rule6TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="30dp"
            android:text="@string/rule6"
            android:textAlignment="textStart"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rule7TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="30dp"
            android:text="@string/rule7"
            android:textAlignment="textStart"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rule8TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="30dp"
            android:text="@string/rule8"
            android:textAlignment="textStart"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rule9TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="30dp"
            android:text="@string/rule9"
            android:textAlignment="textStart"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rule10TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="30dp"
            android:text="@string/rule10"
            android:textAlignment="textStart"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>